# raspoznavayka

./: .gitignore  2  CDataBase.h  CFixedHash.h  CHash.h  CInDBMelody.h  CMelody.h  README.md  build.sh  build_and_run  build_only  class_diagram.dia  core  lib  log.txt  raspoznavayka.h  run.sh  run_only
aquila-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  uninstall.cmake
aquila-build/examples/: Makefile  cmake_install.cmake
aquila-build/examples/am_modulation/: Makefile  cmake_install.cmake
aquila-build/examples/dtw_path_recovery/: Makefile  cmake_install.cmake
aquila-build/examples/fft_comparison/: Makefile  cmake_install.cmake
aquila-build/examples/fft_filter/: Makefile  cmake_install.cmake
aquila-build/examples/fft_simple_spectrum/: Makefile  cmake_install.cmake
aquila-build/examples/frame_iteration/: Makefile  cmake_install.cmake
aquila-build/examples/generators/: Makefile  cmake_install.cmake
aquila-build/examples/mfcc_calculation/: Makefile  cmake_install.cmake
aquila-build/examples/sine_generator/: Makefile  cmake_install.cmake
aquila-build/examples/spectrogram/: Makefile  cmake_install.cmake
aquila-build/examples/square_generator/: Makefile  cmake_install.cmake
aquila-build/examples/text_plot/: Makefile  cmake_install.cmake
aquila-build/examples/triangle_generator/: Makefile  cmake_install.cmake
aquila-build/examples/utility_functions/: Makefile  cmake_install.cmake
aquila-build/examples/wave_info/: Makefile  cmake_install.cmake
aquila-build/examples/wave_iteration/: Makefile  cmake_install.cmake
aquila-build/examples/window_plot/: Makefile  cmake_install.cmake
aquila-build/lib/: Makefile  cmake_install.cmake
aquila-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  constants.h
database/: id3_tags  index  melodies
database/hashes/: 24.hash  25.hash  26.hash  2A.hash  2B.hash  33.hash  34.hash  39.hash  49.hash  4A.hash  4C.hash  4E.hash  55.hash  56.hash  57.hash  5A.hash  5C.hash  5E.hash  65.hash  66.hash  68.hash  69.hash  72.hash  73.hash  74.hash  92.hash  93.hash  95.hash  99.hash  9A.hash  9C.hash  A4.hash  A7.hash  AB.hash  AD.hash  AE.hash  BA.hash  BD.hash  C9.hash  CC.hash  (+7 more)
src/: .CInputAudio.cpp.swp  .CInputAudio.h.swp  .CMelody.cpp.swo  .CRecordedMelody.h.swp  CDataBase.cpp  CDataBase.h  CFixedHash.cpp  CFixedHash.h  CHash.cpp  CHash.h  CHashMatch.cpp  CHashMatch.h  CIDTag.cpp  CIDTag.h  CInDBMelody.cpp  CInDBMelody.h  CInnDBMelody.cpp  CInput.cpp  CInput.h  CInputAudio.cpp  CInputAudio.h  CMakeLists.txt  CMelody.cpp  CMelody.h  CRecordedMelody.cpp  CRecordedMelody.h  a.out  dB_t.cpp  dB_t.h  errors.cpp  errors.h  interval_t.cpp  interval_t.h  math.cpp  math.h  raspoznavayka.cpp  raspoznavayka.h
src/lib/aquila/: .gitignore  libAquila.a.86  libAquila.a.x86_64-apple-darwin15.4.0  libOoura_fft.a.64  libOoura_fft.a.86  libOoura_fft.a.x86_64-apple-darwin15.4.0
src/lib/rtaudio-4.1.2/: CMakeLists.txt
(+6 files in other folders)
